# hurry

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  justfile  rustfmt.toml
.cursor/: terminal-output-prompt.md
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  release.yml
examples/: README.md  basic_pointers.rs  cell_types.rs  interior_mutability.rs
hurry-macros/: Cargo.toml  README.md
hurry-macros/src/: lib.rs
hurry-macros/tests/: shorthand.rs
src/: README.md  lib.rs
