[package]
name = "hurry"
version = "0.1.3"
edition = "2021"
authors = ["Peter Antoncich <antoncichp@gmail.com>"]
description = "Convenient macros for creating pointer types (Box, Rc, Arc, etc.)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweetpeteza/hurry"
keywords = ["macro", "pointer", "box", "rc", "arc"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"

[dependencies]
hurry-macros = { version = "0.1.3", path = "./hurry-macros", optional = true }

[dev-dependencies]

[features]
macros = ["hurry-macros"]
