[package]
name = "hurry-macros"
version = "0.1.2"
edition = "2021"
authors = ["Peter Antoncich <antoncichp@gmail.com>"]
description = "Procedural macros for the hurry crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweetpeteza/hurry"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
